<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="TypographyEllipsis">

    <string name="app_name">Carbon Player</string>

    <string name="notification_channel_name">Default</string>
    <string name="notification_channel_desc">The default notification channel.</string>

    <string name="title_activity_intro">Intro</string>

    <string name="intro_welcome">Welcome to Carbon Player</string>
    <string name="intro_slide_desc">All your music, \nthe way it was intended</string>

    <string name="intro_setup">Let\'s get setup</string>
    <string name="intro_slide2_desc">Sign in to your Google Account so we can access your music</string>
    <string name="intro_signin">Sign In</string>
    <string name="sign_in_dialog_header">Sign in to your Google Account</string>
    <string name="username">Username/Email</string>
    <string name="password">Password</string>

    <string name="intro_settingup">Setting up...</string>
    <string name="intro_slide3_desc">Logging in...</string>
    <string name="intro_slide3_desc2">Getting your music library. Retrieved %1$d songs.</string>
    <string name="intro_slide3_desc3">Getting your music library. Retrieving playlists.</string>
    <string name="intro_slide3_error">Error</string>
    <string name="intro_slide3_no_nautilus">A Play Music All Access subscription is required to use Carbon Player.</string>
    <string name="intro_slide3_issue">An issue occurred while setting up Carbon Player.</string>
    <string name="intro_done">We\'re all set</string>
    <string name="intro_slide4_desc">Tap the checkmark to start listening</string>

    <string name="ok">OK</string>

    <string name="next">Next</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="previous_song">Previous Song</string>
    <string name="play_pause_button">Play pause button</string>

    <string name="serverrejectionexception_another_stream_being_played">Another stream is being played.</string>
    <string name="serverrejectionexception_stream_rate_limit_reached">Rate limit reached for streaming.</string>
    <string name="serverrejectionexception_device_not_authorized">Device not authorized.</string>
    <string name="serverrejectionexception_track_not_in_subscription">Track is not available to your subscription level.</string>
    <string name="serverrejectionexception_device_version_blacklisted">This device or app version is blacklisted.</string>

    <string name="error_internal_error">Internal error.</string>
    <string name="error_unknown_error">Internal error.</string>

    <string name="settings_opt_general">General</string>
    <string name="settings_opt_general_desc">Change preferences for streaming, downloads, and more</string>
    <string name="settings_opt_appearance">Appearance</string>
    <string name="settings_opt_appearance_desc">Customize the look and feel of Carbon</string>
    <string name="settings_opt_account">Account</string>
    <string name="settings_opt_account_desc">Manage your connected Google account</string>
    <string name="settings_opt_about">About</string>
    <string name="settings_opt_about_desc">View info about this application and open-source licenses</string>

    <string name="top_charts">Top Charts</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="my_library">My Library</string>

    <string name="play_button_default_desc">Play Button</string>

    <string name="action_start_radio">Start radio</string>
    <string name="action_play_next">Play next</string>
    <string name="action_add_to_queue">Add to queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_share">Share</string>

    <string name="topcharts_tab_songs">Songs</string>
    <string name="topcharts_tab_albums">Albums</string>

    <string name="download_button_desc">Download</string>
    <string name="overflow_desc">More</string>

    <string name="settings_general_opt_quality_wifi">Streaming quality on WiFi</string>
    <string name="settings_general_opt_quality_mobile">Streaming quality on mobile network</string>

    <string-array name="stream_qualities">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="colorModes">
        <item>Most Prominent</item>
        <item>Vibrant</item>
        <item>Vibrant Light</item>
        <item>Vibrant Dark</item>
        <item>Muted</item>
        <item>Muted Dark</item>
        <item>Muted Light</item>
    </string-array>

    <string name="opt_quality_high">High</string>
    <string name="opt_quality_medium">Medium</string>
    <string name="opt_quality_low">Low</string>

    <string name="settings_appearance_opt_primary_color_mode">Primary color mode</string>
    <string name="settings_opt_appearance_accent_color_mode">Accent color mode</string>
    <string name="see_more">See More</string>
    <string name="all_albums">All Albums</string>
    <string name="related_artists">Related Artists</string>
    <string name="albums">Albums</string>

    <string name="search_header">Results for \"%1$s\"</string>
    <string name="search_bar_placeholder">Search music</string>
    <string name="error_search">Error loading search results.</string>

    <string name="media_type_song">Song</string>
    <string name="media_type_artist">Artist</string>
    <string name="media_type_album">Album</string>
    <string name="media_type_playlist">Playlist</string>
    <string name="media_type_genre">Genre</string>
    <string name="media_type_station">Radio station</string>
    <string name="media_type_situation">Situation</string>
    <string name="media_type_video">Video</string>
    <string name="media_type_podcast">Podcast</string>
    <string name="media_type_unknown">Unknown</string>
    <string name="media_type_best_match">Best match</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="with_your_google_account">with your Google Account</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_delete">Delete</string>
    <string name="sample_email">user01@gmail.com</string>
    <string name="sign_out">Sign out</string>
    <string name="settings_account_sign_out_desc">Sign out of your account</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out? This will also delete all stored data.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="explore">Explore</string>
    <string name="add_to_library">Add to library</string>
    <string name="remove_from_library">Remove from library</string>
    <string name="cant_add_track_to_library">This track can\'t be added to the library</string>
    <string name="track_added_to_library">Track added to library</string>
    <string name="error_adding_to_library">Error adding to library</string>
    <string name="cant_remove_track_from_library">This track can\'t be removed from the library</string>
    <string name="err_sj_not_supported">This Google account does not support music.</string>


</resources>
