<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_start_radio"
        android:title="@string/action_start_radio" />
    <item
        android:id="@+id/menu_remove_from_library"
        android:title="@string/remove_from_library" />
    <item
        android:id="@+id/menu_play_next"
        android:title="@string/action_play_next" />
    <item
        android:id="@+id/menu_add_to_playlist"
        android:title="@string/action_add_to_playlist" />
    <item
        android:id="@+id/menu_go_to_artist"
        android:title="@string/action_go_to_artist" />
    <item
        android:id="@+id/menu_go_to_album"
        android:title="@string/action_go_to_album" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/action_share" />
</menu>