<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/settings_item_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_opt_general"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_opt_general_desc"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/settings_item_appearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_opt_appearance"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_opt_appearance_desc"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/settings_item_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_opt_account"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_opt_account_desc"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />


        <LinearLayout
            android:id="@+id/settings_item_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_opt_about"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_opt_about_desc"
                />
        </LinearLayout>


    </LinearLayout>

</ScrollView>