<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro_setup"
        android:id="@+id/introSetup"
        android:fontFamily="@font/renner_light"
        android:textSize="26sp"
        tools:layout_editor_absoluteWidth="165dp"
        tools:layout_editor_absoluteHeight="30dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout5"
        android:layout_marginTop="64dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout5"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_slide2_desc"
        android:fontFamily="@font/renner_medium"
        android:lineSpacingMultiplier="1.2"
        android:id="@+id/introSlide2Desc"
        android:textSize="16sp"
        android:textAlignment="center"
        android:maxWidth="320dp"
        tools:layout_editor_absoluteWidth="320dp"
        tools:layout_editor_absoluteHeight="37dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/introSetup"
        android:layout_marginTop="48dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout5"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_signin"
        android:id="@+id/introOAuthStart"
        android:textStyle="bold"
        android:fontFamily="@font/renner"
        android:backgroundTint="#499"
        tools:layout_editor_absoluteWidth="88dp"
        tools:layout_editor_absoluteHeight="48dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/introSlide2Desc"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout5"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout5"
        tools:layout_constraintBottom_creator="1" />

</androidx.constraintlayout.widget.ConstraintLayout>