<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nowplaying_frame"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/colorPrimary"
    android:visibility="visible">

    <com.carbonplayer.ui.widget.SquareImageView
        android:id="@+id/nowplaying.thumb"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/unknown_music_track"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nowplaying.details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/npui_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="8dp"
            android:text="Song Name"
            android:textColor="#fff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nowplaying.playpause"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/play_pause_button"
            app:layout_constraintEnd_toStartOf="@+id/nowplaying.fastforward"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pause" />

        <ImageView
            android:id="@+id/nowplaying.fastrewind"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/previous_song"
            app:layout_constraintEnd_toStartOf="@+id/nowplaying.playpause"
            app:layout_constraintTop_toTopOf="@+id/nowplaying.playpause"
            app:srcCompat="@drawable/ic_fast_rewind" />

        <TextView
            android:id="@+id/npui_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Artist"
            app:layout_constraintStart_toStartOf="@+id/npui_song"
            app:layout_constraintTop_toBottomOf="@+id/npui_song" />

        <ImageView
            android:id="@+id/nowplaying.fastforward"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/fast_forward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nowplaying.playpause"
            app:srcCompat="@drawable/ic_fast_forward" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>